# xclock

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  install.ps1  install.sh  uninstall.ps1  uninstall.sh
.github/workflows/: ci.yml
packaging/xpkg/: XBUILD
src/: app.rs  args.rs  clock.rs  color.rs  duration.rs  font.rs  input.rs  main.rs  runtime.rs  terminal.rs  ui.rs
