[package]
name = "xclock"
version = "0.1.0"
edition = "2024"
description = "A ttyclock-like ASCII terminal clock and countdown timer written in Rust."
license = "MIT"
readme = "README.md"
repository = "https://github.com/yourusername/xclock"
homepage = "https://github.com/yourusername/xclock"
keywords = ["clock", "terminal", "ascii", "tui", "countdown", "ttyclock"]
categories = ["command-line-utilities"]

[dependencies]
chrono = "0.4.43"
clap = { version = "4.5.54", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.30.0"
